src/tests/snapshots/cargo_vet__tests__violations__mock-simple-violation-cur-unaudited.snap
---
source: src/tests/violations.rs
expression: output
---
Violations Found!
  third-party1:10.0.0
    the exemption 10.0.0
      criteria: ["reviewed"]
    conflicts with own violation against =10
      criteria: ["weak-reviewed"]


