src/tests/snapshots/cargo_vet__tests__violations__mock-simple-violation-full-audit.json.snap
---
source: src/tests/violations.rs
expression: json
---
{
  "conclusion": "fail (violation)",
  "violations": {
    "third-party1:10.0.0": [
      {
        "AuditConflict": {
          "audit": {
            "criteria": "safe-to-deploy",
            "delta": null,
            "notes": null,
            "version": "3.0.0",
            "violation": null,
            "who": null
          },
          "audit_source": "Local",
          "violation": {
            "criteria": "safe-to-run",
            "delta": null,
            "notes": null,
            "version": null,
            "violation": "=3.0.0",
            "who": null
          },
          "violation_source": "Local"
        }
      },
      {
        "AuditConflict": {
          "audit": {
            "criteria": "safe-to-deploy",
            "delta": "3.0.0 -> 5.0.0",
            "notes": null,
            "version": null,
            "violation": null,
            "who": null
          },
          "audit_source": "Local",
          "violation": {
            "criteria": "safe-to-run",
            "delta": null,
            "notes": null,
            "version": null,
            "violation": "=3.0.0",
            "who": null
          },
          "violation_source": "Local"
        }
      }
    ]
  }
}
