src/tests/snapshots/cargo_vet__tests__violations__mock-simple-violation-wildcard.snap
---
source: src/tests/violations.rs
expression: output
---
Violations Found!
  third-party1:10.0.0
    the own audit 10.0.0
      criteria: ["safe-to-deploy"]
    conflicts with own violation against *
      criteria: ["safe-to-run"]


